[project]
name = "my-comfyui"
version = "0.1.0"
description = "ComfyUI"
requires-python = ">=3.12"
dependencies = [
    # Add your dependencies here
    # Example:
    # "numpy>=1.26.0",
    # "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

